# yaha

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE.MIT  README.md  bld.sh  check.sh  make.ps1  setup.cmake  vcpkg.json  wc.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
YahaCs/: .gitignore  YahaCs.sln  publish.ps1
YahaCs/Demo1/: Program.cs
common/: ICommand.hpp  download.cpp  download.hpp  utils.cpp  utils.hpp
doc/: classes.puml  classes2.puml  classes3.puml  container.puml  context.puml  expert.puml  mqtt.md
docker/: Dockerfile.dev-rpi  Dockerfile.run  Dockerfile.vcpkg  Dockerfile.vcpkg-alpine
etc/: elprice.fbs  fbsdata.fbs  toolchain-arm64.cmake  toolchain-x64.cmake
etc/docker/: Dockerfile.dev  Dockerfile.dev-alpine  Dockerfile.vcpkg-rpi  docker-compose.yml
loader/: CMakeLists.txt  asus_download.hpp  main.cpp  spot_download.hpp  spot_parse.hpp  weather_download.hpp  weather_parse.cpp  weather_parse.hpp
mqtt/: CMakeLists.txt  actuator.cpp  actuator.hpp  application.hpp  bld.sh  collect.cpp  collect.hpp  common.cpp  common.hpp  config.hpp  data.hpp  database.cpp  database.hpp  debug_output.hpp  devices.json  es_base.hpp  es_cond.hpp  event.hpp  event_bus.hpp  event_data.hpp  events.h  events.hpp  expert.cpp  expert.hpp  hardware_info.hpp  history.cpp  history.hpp  logic.cpp  logic.hpp  main.cpp  mqtt.cpp  mqtt.hpp  mqtt_device.cpp  mqtt_device.hpp  mqtt_mosquitto.cpp  mqtt_mosquitto.hpp  observable.hpp  observer.hpp  scheduler.cpp  scheduler.hpp  (+4 more)
mqtt/automation/: automation.cpp  automation.hpp  car_heater.cpp  car_heater.hpp  facts.hpp  lights.cpp  lights.hpp  mqtt_output.hpp  registry.cpp  registry.hpp  room_heater.cpp  room_heater.hpp  storage_heater.cpp  storage_heater.hpp  switch_light.cpp  switch_light.hpp  water_heater.cpp  water_heater.hpp
mqtt/controller/: automation.cpp  automation.hpp  boolean_controller.cpp  boolean_controller.hpp  car_heater.cpp  car_heater.hpp  controller.hpp  lights.cpp  lights.hpp  registry.cpp  registry.hpp  room_heater.cpp  room_heater.hpp  storage_heater.cpp  storage_heater.hpp  switch_light.hpp  water_heater.cpp  water_heater.hpp
mqtt/data/: common.hpp  config.hpp  configbase.hpp  configtxt.hpp  data.hpp  database.cpp  database.hpp  datas.hpp  datasource.hpp  fbsdata.fbs  sourcesqlite.cpp  sourcesqlite.hpp  sourcestring.cpp  sourcestring.hpp  tables.cpp  tables.hpp
mqtt/demo/: sun_data.cpp  sun_data.h  suntime.cpp  suntime.hpp
mqtt/device/: debug_device.h  device.hpp  light_device.hpp  registry.cpp  registry.hpp  shelly_device.hpp  switch_device.hpp  temp_sensor_device.hpp
mqtt/expert/: es_base.hpp  es_cond.hpp  expert.cpp  expert.hpp  int_time.hpp  main.cpp
mqtt/task/: calc_price.hpp  calc_sun.cpp  calc_sun.hpp  load_average_reader.hpp  memory_usage_reader.hpp  process_memory_reader.hpp  temperature.hpp  time.cpp  time.hpp
test/: CMakeLists.txt  main.cpp  mocks.h  run.sh  test_collect.cpp  test_datas.cpp  test_light_device.cpp  test_logic.cpp  test_mqtt_output.cpp  test_orm.cpp  test_shelly.cpp  test_sourcesqlite.cpp  test_sourcestring.cpp  test_switch_device.cpp  test_task_calc_sun_reference.cpp  test_time.cpp
weather/: CMakeLists.txt  database.cpp  main.cpp  parse.cpp
